--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 .box {
-  border: 0.5px solid black;
+  border: 0.5px solid white;
   border-radius: 4px;
 }
 
@@ -25,9 +26,129 @@ body {
 
 .grid-size-input {
   width: 160px;
-  color: #fff;
+  color: #383838;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
   z-index: 1;
+}
+
+.container {
+  position: absolute;
+  display: flex;
+  gap: 36px;
+}
+
+.side-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slider-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-size: 18px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 32px;
+}
+
+#particles-js {
+  background-color: #080808;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+}
+
+.rainbow-button {
+  padding: 1em 1.5em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  transition: transform 0.3s;
+  width: 150px;
+}
+
+.rainbow-button:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-rainbow-button 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-rainbow-button {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.rainbow-button:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.rainbow-button:hover {
+  transform: scale(1.2);
+}
+
+.slider-pic {
+  appearance: none;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: opacity 0.15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
